# daycast-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_extracted_text.py  003_add_cleared_to_input_items.py  004_add_input_item_edits.py  005_add_default_length_to_channel_settings.py  006_add_users_table.py  007_add_published_posts.py  008_batch2_fields.py
app/: config.py  dependencies.py  errors.py  main.py  rate_limit.py
app/models/: __init__.py  channel_setting.py  client.py  generation.py  generation_result.py  generation_settings.py  input_item.py  input_item_edit.py  published_post.py  user.py
app/routers/: auth.py  catalog.py  days.py  generate.py  inputs.py  public.py  publish.py  settings.py  uploads.py
app/schemas/: auth.py  day.py  error.py  generation.py  generation_settings.py  input_item.py  publish.py  settings.py
app/services/: ai.py  auth.py  file_storage.py  product_config.py  url_extractor.py
config/: product.yml
docs/: changelog.md  deploy.md
infra/: Caddyfile
infra/backup/: backup.sh
infra/launchd/: com.daycast.api.plist  com.daycast.backup.plist  com.daycast.caddy.plist  com.daycast.pub.plist
prompts/: generate_v1.md  regenerate_v1.md
scripts/: deploy.sh  setup-mac.sh
tests/: conftest.py  test_catalog_settings.py  test_days.py  test_errors_ratelimit.py  test_generate.py  test_health.py  test_inputs.py  test_regenerate.py  test_uploads.py  test_url_extraction.py
